# Pac-man

./: .project  .travis.yml  CMakeLists.txt  LICENSE  README.md  package.xml
data/maps/: TestMapName.yaml  defaultMapUsed.yaml  my_map1.pgm
data/models/bluebox/: model.config  model.sdf
data/models/blueghost/: model.config  model.sdf
data/models/blueghost/materials/scripts/: blueghost.material
data/models/bluetrue/: model.config  model.sdf
data/models/bluetrue/materials/scripts/: bluetrue.material
data/models/greenbox/: model.config  model.sdf
data/models/greentrue/: model.config  model.sdf
data/models/greentrue/materials/scripts/: greentrue.material
data/models/redbox/: model.config  model.sdf
data/models/redtrue/: model.config  model.sdf
data/models/redtrue/materials/scripts/: redtrue.material
data/models/strawberry/: model.config  model.sdf
data/models/strawberry/materials/scripts/: strawberry.material
data/worlds/: demo_world.world  filled_world.world  just_walls.world  pacman_world.world  pacworld.world  pacworld2.world  red_and_blue.world  red_and_green.world  small_world.world  small_world_empty.world  small_world_empty2.world  true_colors.world
docs/html/: _bad_object_8cpp.html  _bad_object_8hpp.html  _bad_object_8hpp_source.html  _good_object_8cpp.html  _good_object_8hpp.html  _good_object_8hpp_source.html  _image_processing_8cpp.html  _image_processing_8hpp.html  _image_processing_8hpp_source.html  _movement_8cpp.html  _movement_8hpp.html  _movement_8hpp_source.html  _navigation_node_8cpp.html  _navigator_8cpp.html  _navigator_8hpp.html  _navigator_8hpp_source.html  _object_8hpp.html  _object_8hpp_source.html  _object_list_8cpp.html  _object_list_8hpp.html  _object_list_8hpp_source.html  _object_list_node_8cpp.html  annotated.html  class_bad_object-members.html  class_bad_object.html  class_good_object-members.html  class_good_object.html  class_identification-members.html  class_identification.html  class_image_processing-members.html  class_image_processing.html  class_movement-members.html  class_movement.html  class_navigator-members.html  class_navigator.html  class_object-members.html  class_object.html  class_object_list-members.html  class_object_list.html  classes.html  (+18 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  create.txt  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+7 more)
docs/latex/: _bad_object_8cpp.tex  _bad_object_8hpp.tex  _good_object_8cpp.tex  _good_object_8hpp.tex  _image_processing_8cpp.tex  _image_processing_8hpp.tex  _movement_8cpp.tex  _movement_8hpp.tex  _navigation_node_8cpp.tex  _navigator_8cpp.tex  _navigator_8hpp.tex  _object_8hpp.tex  _object_list_8cpp.tex  _object_list_8hpp.tex  _object_list_node_8cpp.tex  annotated.tex  class_bad_object.eps  class_bad_object.tex  class_good_object.eps  class_good_object.tex  class_identification.tex  class_image_processing.tex  class_movement.tex  class_navigator.tex  class_object.eps  class_object.tex  class_object_list.tex  files.tex  hierarchy.tex  main_8cpp.tex  md__c_1__users_ethan__desktop__doxygen__environment_pacman-phase3c__r_e_a_d_m_e.tex  mytestserver_8cpp.tex  refman.tex  struct_object_1_1_pose.tex
include/: BadObject.hpp  GoodObject.hpp  ImageProcessing.hpp  Movement.hpp  Navigator.hpp  Object.hpp  ObjectList.hpp
launch/: ari_run.launch  bootPointCloudNodelet.launch  corbyn_run.launch  createMap.launch  demo.launch  just_run.launch  pacteleop.launch  random_objects.launch  red_and_blue.launch  red_and_green.launch  scrap.launch  simWorldTest.launch  small.launch  small_empty.launch  small_empty2.launch  test_delete.launch
msg/: ObjPose.msg  VecPoses.msg
results/: PacA.bag  cppcheck.txt  cpplint.txt
src/: BadObject.cpp  GoodObject.cpp  IdentificationNode.cpp  ImageProcessing.cpp  Movement.cpp  MovementNode.cpp  NavigationNode.cpp  Navigator.cpp  Object.cpp  ObjectList.cpp  ObjectListNode.cpp  ObjectNode.cpp  main.cpp  mytestserver.cpp  pubpose.cpp
srv/: NavPose.srv
test/: GoodObjectTest.cpp  ImageProcessingTest.cpp  MovementTest.cpp  ObjectListTest.cpp  ObjectTest.cpp  myTest.cpp  mytestserver.cpp  testsrv.test
worlds/: random_world.world  test_world.world
